--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </article>
     <article class="text">
       <h1>OLD IPHONE GIVEAWAY</h1>
-      <h4>Giveaway Ends On Wednesday, 6 March 2024 At <br>11 : 30am</h4>
+      <h4>Giveaway Ends On Wednesday, 30 March 2024 At <br>12 : 30pm</h4>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores rerum aliquid maxime doloribus, accusamus, at modi illum natus cupiditate sed qui velit temporibus ullam perspiciatis fugiat eius harum amet nemo sequi odit exercitationem possimus consectetur. Possimus debitis qui eaque veniam.
       </p>
